<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Edit -->
    <item
        android:id="@+id/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_edit"/>

    <!-- Favorite -->
    <item
        android:id="@+id/action_favorite"
        android:icon="@android:drawable/btn_star"
        android:title="Add Favorite"/>

    <!-- Share -->
    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menu_share"/>

    <!-- View on Web -->
    <item
        android:id="@+id/action_view_web"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/menu_view_web"/>

    <!-- Delete -->
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_delete"/>

</menu>
